# AustriaMunicipalityProject

./: .gitignore  CMakeLists.txt
data/: 2020.csv  2021.csv  error_log.txt  municipalities.csv
src/: DataLoader.cpp  DataLoader.h  Municipality.h  MunicipalityProcessor.cpp  MunicipalityProcessor.h  Predicates.h  Territorial.h  filters.cpp  filters.h  heap_monitor.h  main.cpp  sort.cpp  sort.h
